
Added Swedish translations (thanks Aberidius!)
Fixed an English translation error (connected from instead of connected to)
Fixed PermaKill mode (needs properly re-testing)
Updated Directory to use language translations
Updated some Directory pages to use proper CSS formatting
Made plugin and schema descriptions (and names) translatable

04/09/2017 (Clockwork)
Proper attribute language description for attributes
Removed sh_fixes.lua file as it's no longer used in this update
Localized Stamina attribute in the stamina plugin
Moved Stamina plugin back to HL2RP because it's stupid that it was ever in the frameRwork, the schema and its plugins should decide what attributes exist
Added character name limit (thanks HappyGoLucky1!)
Updated Korean translation files (thanks Tensa!)
Removed a config option that was unused (name_crafting)

04/09/2017 (HL2RP)
Added descriptions for all attributes to the language file
Added proper icons for all attributes

05/09/2017
Updated all system panels to use proper form and padding
Added missing language strings to system panels
Started work on an alternative version of the theme (slightly more plainer, different font) which one you use is your choice (or make your own!)
Updated a whole bunch of derma related files
Changed the way the System menu works and updated its styling
Added System icons for each System type
Fixed an error (null ref) with typing display
Fixed an error with the notify all lang breaking the chatbox

06/09/2017
Added exception handling for /rankdemote and /rankpromote
Fixed /itc not working at all (became undone?)
Fixed /plyrespawntp erroring out when trying to TP somebody
Removed anon (?) speaker character
Proper Codebase formatting for ALL function headers
Added Tools folder to repo with HookDoccer and ItemTranslator (for developers)
Fixed PlySetFlags output text (thanks @robot)
Fixed System - Manage Config NumSlider "Value" to support languages (thanks @robot)
Updated the Korean translations (thanks @tensa)