@@ -141,16 +141,16 @@ function Clockwork.render:AddSlice9(name, fileName, cornerSize)
 	return sliceObject;
 end;
 
-SMALL_BAR_BG = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-SMALL_BAR_FG = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-INFOTEXT_SLICED = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-MENU_ITEM_SLICED = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-SLICED_SMALL_TINT = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-SLICED_INFO_MENU_INSIDE = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-PANEL_LIST_SLICED = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
-DERMA_SLICED_BG = Clockwork.render:AddSlice9("SimpleRed", "clockwork/sliced/simplered", 28);
-SLICED_LARGE_DEFAULT = Clockwork.render:AddSlice9("SimpleRed", "clockwork/sliced/simplered", 28);
-SLICED_PROGRESS_BAR = Clockwork.render:AddSlice9("SimpleRed", "clockwork/sliced/simplered", 28);
-SLICED_PLAYER_INFO = Clockwork.render:AddSlice9("SimpleRed", "clockwork/sliced/simplered", 28);
-SLICED_INFO_MENU_BG = Clockwork.render:AddSlice9("SimpleRed", "clockwork/sliced/simplered", 28);
-SLICED_COLUMNSHEET_BUTTON = Clockwork.render:AddSlice9("SimpleTint", "clockwork/sliced/simpletint", 6);
+SMALL_BAR_BG = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+SMALL_BAR_FG = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+INFOTEXT_SLICED = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+MENU_ITEM_SLICED = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+SLICED_SMALL_TINT = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+SLICED_INFO_MENU_INSIDE = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+PANEL_LIST_SLICED = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
+DERMA_SLICED_BG = Clockwork.render:AddSlice9("BigBox", "clockwork/sliced/bigbox", 28);
+SLICED_LARGE_DEFAULT = Clockwork.render:AddSlice9("BigBox", "clockwork/sliced/bigbox", 28);
+SLICED_PROGRESS_BAR = Clockwork.render:AddSlice9("BigBox", "clockwork/sliced/bigbox", 28);
+SLICED_PLAYER_INFO = Clockwork.render:AddSlice9("BigBox", "clockwork/sliced/bigbox", 28);
+SLICED_INFO_MENU_BG = Clockwork.render:AddSlice9("BigBox", "clockwork/sliced/bigbox", 28);
+SLICED_COLUMNSHEET_BUTTON = Clockwork.render:AddSlice9("SmallBox", "clockwork/sliced/smallbox", 6);
