@@ -76,6 +76,7 @@ AddCSLuaFile(cwKernel:GetSchemaGamemodePath().."/cl_init.lua");
 --[[ Add any requires resource files from the server. --]]
 Clockwork.kernel:AddFile("materials/clockwork/decrease.png");
 Clockwork.kernel:AddFile("materials/clockwork/increase.png");
+Clockwork.kernel:AddDirectory("materials/clockwork/sliced/*.png");
 Clockwork.kernel:AddDirectory("materials/clockwork/system/*.png");
 
 --[[
