@@ -9,7 +9,7 @@
 CW_ENGLISH = Clockwork.lang:GetTable("English");
 
 CW_ENGLISH["WeaponSelectMulti"] = "Weapon Selection Multi";
-CW_ENGLISH["WeaponSelectMultiDesc"] = "Should the weapon selection be hidden if the player has only one weapon.";
+CW_ENGLISH["WeaponSelectMultiDesc"] = "Should the weapon selection be hidden if the player has only one weapon?";
 
 CW_ENGLISH["PrimaryAmmoCount"] = "Primary: #1/#2";
 CW_ENGLISH["SecondaryAmmoCount"] = "Secondary: #1/#2";
@@ -19,3 +19,5 @@ CW_ENGLISH["WeaponSelectInstructions"] = "INSTRUCTIONS";
 CW_ENGLISH["WeaponSelectPurpose"] = "PURPOSE";
 CW_ENGLISH["WeaponSelectContact"] = "CONTACT";
 CW_ENGLISH["WeaponSelectAuthor"] = "AUTHOR";
+
+CW_ENGLISH["ThereAreNoOtherWeapons"] = "There are no other weapons";
