@@ -68,3 +68,4 @@ Added Tools folder to repo with HookDoccer and ItemTranslator (for developers)
 Fixed PlySetFlags output text (thanks @robot)
 Fixed System - Manage Config NumSlider "Value" to support languages (thanks @robot)
 Updated the Korean translations (thanks @tensa)
+Fixed not being able to set config via the system menu
